--- a/cell03/cell02/ex01/menu.html
+++ b/cell03/cell02/ex01/menu.html
@@ -10,7 +10,7 @@
     <div class="Dropdown">
         <button>Dropdown</button>
         <div class="Dropdown-content">
-            <span>Bocchi_the_Bread</span>
+            <span>Bocchi the Bread</span>
             <span>Lettuce</span>
             <span>Cheese</span>
             <span>Meat</span>
